--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -27,16 +27,20 @@
         <tr>
             <td>
                 <form method="POST" action="{{ url_for('play_event', event_id=current.id) }}">
-                    <label for="difficulty">Difficulty:</label>
-                    <select id="difficulty" name="difficulty">
-                        <option value="5">Easy (5)</option>
-                        <option value="10">Moderate (10)</option>
-                        <option value="15">Hard (15)</option>
-                        <option value="20">Very Hard (20)</option>
-                    </select><br>
+                    {% if current.outcome_type == 'fourway' %}
+                        <label for="difficulty">Difficulty:</label>
+                        <select id="difficulty" name="difficulty">
+                            <option value="5">Easy (5)</option>
+                            <option value="10">Moderate (10)</option>
+                            <option value="15">Hard (15)</option>
+                            <option value="20">Very Hard (20)</option>
+                        </select><br>
+                    {% endif %}
+                    {% if current.outcome_type == 'fourway' or current.outcome_type == 'numeric' %}
                     <label for="stat_adjustment">Stat Adjustment:</label>
                     <input type="number" id="stat_adjustment" name="stat_adjustment" value="{{ current.stat_adjustment }}">
                     <br>
+                    {% endif %}
                     <button type="submit" id="roll-btn">Roll</button>
                 </form>
             </td>
