--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -52,7 +52,6 @@ h1 {
 .dropdown-container {
     position: relative;
 }
-
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -63,13 +62,34 @@ h1 {
     padding: 12px 16px;
     z-index: 1;
 }
-
 .upper-right:hover .dropdown-menu {
     display: block;
 }
-
 .dropdown-icon {
     cursor: pointer;
+}
+
+.popup-button {
+    position: relative;
+}
+.popup-button:hover .popup-frame {
+    display: block;
+}
+.popup-frame {
+    display: none;
+    position: absolute;
+    background-color: #2a2a2a;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 10px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    z-index: 1;
+    width: auto;
+    white-space: nowrap;
+}
+.popup-frame a {
+    display: block;
 }
 
 .separator {
