--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block upper_left %}
+    <div class="nav-container">
+        <a href="{{ url_for('configure') }}">General Setup</a>
+    </div>
+{% endblock %}
+
 {% block content %}
     <h1>Location Setup</h1>
     <form method="post">
